--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,8 @@
 </head>
 <body>
    <div class="main-content">
-    {{>header}}  
+    {{>header}} 
+    <p>This site was created by Priyanka. It uses app like mapbox.com and darksky.com.</p> 
     <img class="portrait" src="/img/ping.jpg">
   </div>
  
